--- a/entirej-core/pom.xml
+++ b/entirej-core/pom.xml
@@ -108,7 +108,7 @@
 						<goals>
 							<goal>site</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>site</phase>
 					</execution>
 				</executions>
 			</plugin>
