--- a/entirej-core/pom.xml
+++ b/entirej-core/pom.xml
@@ -87,7 +87,7 @@
 			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
-				<version>0.10-SNAPSHOT</version>
+				<version>0.10</version>
 				<configuration>
 					<message>Maven artifacts for ${project.groupId}:${project.artifactId}:${project.version} ~${maven.build.timestamp}</message>
 					<noJekyll>true</noJekyll>                                                                          
