--- a/entirej-core/pom.xml
+++ b/entirej-core/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.entirej</groupId>
 	<artifactId>entirej-core</artifactId>
-	<version>${VERSION}</version>
+	<version>${VERSION}-SNAPSHOT</version>
 	<name>Entirej Core</name>
 	<build>
 		<finalName>entirej-core-${VERSION}</finalName>
